[gd_scene load_steps=40 format=3]

[ext_resource type="Script" path="res://Script/Level/llbt_challenge.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c2vfl4clw7pa5" path="res://Art/set_menu/653.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dnruq566a8bo1" path="res://Art/MagicWeapon/220.png" id="3"]
[ext_resource type="Texture2D" uid="uid://eqob07i5mlve" path="res://Art/MagicWeapon/222.png" id="4"]
[ext_resource type="Texture2D" uid="uid://be4vhehdc4mkf" path="res://Art/MagicWeapon/68.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cepttdqbtggkg" path="res://Art/MagicWeapon/70.png" id="6"]
[ext_resource type="Texture2D" uid="uid://gw1iaqf6aii5" path="res://Art/MagicWeapon/145.png" id="7"]
[ext_resource type="Texture2D" uid="uid://dpdtihxpfwn8k" path="res://Art/MagicWeapon/149.png" id="8"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="9"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxEmpty" id="6"]
script = null

[sub_resource type="StyleBoxEmpty" id="7"]
script = null

[sub_resource type="StyleBoxEmpty" id="8"]
script = null

[sub_resource type="StyleBoxEmpty" id="9"]
script = null

[sub_resource type="StyleBoxEmpty" id="10"]
script = null

[sub_resource type="StyleBoxEmpty" id="11"]
script = null

[sub_resource type="StyleBoxEmpty" id="12"]
script = null

[sub_resource type="StyleBoxEmpty" id="13"]
script = null

[sub_resource type="StyleBoxEmpty" id="14"]
script = null

[sub_resource type="StyleBoxEmpty" id="15"]
script = null

[sub_resource type="StyleBoxEmpty" id="16"]
script = null

[sub_resource type="StyleBoxEmpty" id="17"]
script = null

[sub_resource type="StyleBoxEmpty" id="18"]
script = null

[sub_resource type="StyleBoxEmpty" id="19"]
script = null

[sub_resource type="StyleBoxEmpty" id="20"]
script = null

[sub_resource type="StyleBoxEmpty" id="21"]
script = null

[sub_resource type="StyleBoxEmpty" id="22"]
script = null

[sub_resource type="StyleBoxEmpty" id="23"]
script = null

[sub_resource type="StyleBoxEmpty" id="24"]
script = null

[sub_resource type="StyleBoxEmpty" id="25"]
script = null

[sub_resource type="StyleBoxEmpty" id="26"]
script = null

[sub_resource type="StyleBoxEmpty" id="27"]
script = null

[sub_resource type="StyleBoxEmpty" id="28"]
script = null

[sub_resource type="StyleBoxEmpty" id="29"]
script = null

[sub_resource type="StyleBoxEmpty" id="30"]
script = null

[node name="LLBTChallenge" type="Node2D"]
script = ExtResource( "1" )

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -449.0
offset_top = -200.0
offset_right = 1339.0
offset_bottom = 744.0
color = Color(0, 0, 0, 0.196078)
metadata/_edit_lock_ = true

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(451, 273)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="BG"]
offset_left = -110.0
offset_top = -125.0
offset_right = 110.0
offset_bottom = -95.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "请选择玲珑宝塔挑战模式"
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
offset_left = -83.0
offset_top = -93.0
offset_right = 75.0
offset_bottom = 137.0
theme_override_constants/separation = -4

[node name="wxms" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.419608, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "无限模式"

[node name="cgms" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.419608, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "6" )
theme_override_styles/hover = SubResource( "7" )
theme_override_styles/pressed = SubResource( "8" )
theme_override_styles/disabled = SubResource( "9" )
theme_override_styles/focus = SubResource( "10" )
text = "闯关模式"

[node name="tztxs" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.419608, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "11" )
theme_override_styles/hover = SubResource( "12" )
theme_override_styles/pressed = SubResource( "13" )
theme_override_styles/disabled = SubResource( "14" )
theme_override_styles/focus = SubResource( "15" )
text = "挑战土行孙"

[node name="tslzz" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.419608, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "16" )
theme_override_styles/hover = SubResource( "17" )
theme_override_styles/pressed = SubResource( "18" )
theme_override_styles/disabled = SubResource( "19" )
theme_override_styles/focus = SubResource( "20" )
text = "挑战雷震子"

[node name="tznz" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.419608, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "21" )
theme_override_styles/hover = SubResource( "22" )
theme_override_styles/pressed = SubResource( "23" )
theme_override_styles/disabled = SubResource( "24" )
theme_override_styles/focus = SubResource( "25" )
text = "挑战哪吒"

[node name="tztttw" type="Button" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.419608, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "26" )
theme_override_styles/hover = SubResource( "27" )
theme_override_styles/pressed = SubResource( "28" )
theme_override_styles/disabled = SubResource( "29" )
theme_override_styles/focus = SubResource( "30" )
text = "挑战托塔天王"

[node name="Close" type="TextureButton" parent="BG"]
offset_left = 109.0
offset_top = -159.0
offset_right = 150.0
offset_bottom = -118.0
texture_normal = ExtResource( "3" )
texture_pressed = ExtResource( "3" )
texture_hover = ExtResource( "4" )
texture_disabled = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="Help" type="TextureButton" parent="BG"]
offset_left = 102.0
offset_top = -99.0
offset_right = 142.0
offset_bottom = -59.0
texture_normal = ExtResource( "5" )
texture_pressed = ExtResource( "5" )
texture_hover = ExtResource( "6" )
texture_disabled = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="Cure" type="TextureButton" parent="BG"]
offset_left = 33.0
offset_top = 98.0
offset_right = 126.0
offset_bottom = 133.0
texture_normal = ExtResource( "7" )
texture_pressed = ExtResource( "7" )
texture_hover = ExtResource( "8" )
texture_disabled = ExtResource( "7" )

[node name="CureText" type="Label" parent="BG/Cure"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 90.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "9" )
text = "增加一层"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Reduce" type="TextureButton" parent="BG"]
offset_left = -136.0
offset_top = 98.0
offset_right = -43.0
offset_bottom = 133.0
texture_normal = ExtResource( "7" )
texture_pressed = ExtResource( "7" )
texture_hover = ExtResource( "8" )
texture_disabled = ExtResource( "7" )
metadata/_edit_lock_ = true

[node name="ReduceText" type="Label" parent="BG/Reduce"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 90.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "9" )
text = "减少一层"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="CengShuText" type="Label" parent="BG"]
offset_left = -44.0
offset_top = 101.0
offset_right = 33.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "9" )
text = "1/24"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Change" type="TextureButton" parent="BG"]
offset_left = -36.0
offset_top = 126.0
offset_right = 57.0
offset_bottom = 161.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource( "7" )
texture_pressed = ExtResource( "7" )
texture_hover = ExtResource( "8" )
texture_disabled = ExtResource( "7" )
metadata/_edit_lock_ = true

[node name="CengShuText" type="Label" parent="BG/Change"]
layout_mode = 0
offset_left = 8.0
offset_top = 2.0
offset_right = 85.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource( "9" )
text = "传送"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[connection signal="pressed" from="BG/VBoxContainer/wxms" to="." method="_on_wxms_pressed" flags=18]
[connection signal="pressed" from="BG/VBoxContainer/cgms" to="." method="_on_cgms_pressed" flags=18]
[connection signal="pressed" from="BG/VBoxContainer/tztxs" to="." method="_on_tztxs_pressed" flags=18]
[connection signal="pressed" from="BG/VBoxContainer/tslzz" to="." method="_on_tslzz_pressed" flags=18]
[connection signal="pressed" from="BG/VBoxContainer/tznz" to="." method="_on_tznz_pressed" flags=18]
[connection signal="pressed" from="BG/VBoxContainer/tztttw" to="." method="_on_tztttw_pressed" flags=18]
[connection signal="pressed" from="BG/Close" to="." method="_on_close_pressed" flags=18]
[connection signal="pressed" from="BG/Help" to="." method="_on_help_pressed" flags=18]
[connection signal="pressed" from="BG/Cure" to="." method="_on_cure_pressed" flags=18]
[connection signal="pressed" from="BG/Reduce" to="." method="_on_reduce_pressed" flags=18]
[connection signal="pressed" from="BG/Change" to="." method="_on_change_pressed" flags=18]
